--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,79 @@
-.none {
-    color: rgb(217, 0, 0) !important;
+.sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    /* padding: 90px 0 0; */
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+    /* z-index: 99; */
 }
 
-.dropdown-menu .dropdown-item {
-    color: #0061f3;
+.navbar {
+    box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
-.dropdown-menu {
-    background-color: rgb(93, 93, 93) !important;
-    margin-left: 3rem;
+.card {
+    background-color: #1e1e2d !important;
 }
-.ltr-space {
-    text-decoration: none !important;
-    margin-left: 1rem;
+.sidebar .nav-link {
+    color: #333;
+}
+
+.active {
+    background-color: #4059a0 !important;
+}
+.content {
+    background-color: #151521;
+    display: block;
+    height: 100vh;
+}
+@media (max-width: 768.98px) {
+    .sidebar {
+        top: 0rem;
+        padding: 0;
+    }
+    .sidebar {
+        position: fixed;
+    }
+    .content {
+        height: auto;
+    }
+    .logo {
+        width: 10rem;
+        height: 7rem;
+        margin-left: 1rem;
+    }
+}
+
+@media (max-width: 425.98px) {
+    .sidebar {
+        top: 0rem;
+        padding: 0;
+        position: initial;
+    }
+    .navbar {
+        padding: 1.5rem;
+    }
+    .content {
+        height: auto;
+    }
+    .navbar-light .navbar-toggler {
+        border-color: rgb(0 0 0) !important;
+    }
+    .logo {
+        width: 10rem !important;
+    }
+}
+
+@media (min-width: 769.98px) {
+    .navbar {
+        top: 0;
+        position: sticky;
+        z-index: 999;
+    }
+    .logo {
+        width: 12rem;
+        height: 9rem;
+        margin-left: 2rem;
+    }
 }
