--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,7 +69,10 @@
     .navbar {
         top: 0;
         position: sticky;
-        z-index: 999;
+        z-index: 998;
+    }
+    .content {
+        z-index: 997;
     }
     .logo {
         width: 12rem;
