--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,15 @@
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
     /* z-index: 99; */
 }
-
+.logo {
+    width: 10rem;
+    height: 7rem;
+    margin-left: 3rem;
+}
+.active {
+    width: 16.5rem;
+    height: 3rem;
+}
 .navbar {
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
@@ -35,13 +43,14 @@
     .sidebar {
         position: fixed;
     }
+
     .content {
         height: auto;
     }
     .logo {
-        width: 10rem;
-        height: 7rem;
-        margin-left: 1rem;
+        width: 10rem !important;
+        height: 7rem !important;
+        margin-left: 3rem;
     }
 }
 
@@ -65,18 +74,33 @@
     }
 }
 
+@media screen {
+}
+
+@media (max-width: 1024.98px) {
+    .logo {
+        width: 6rem;
+        height: 3rem;
+        margin-left: -1rem !important;
+    }
+    .active {
+        height: 3rem !important;
+        width: 3rem;
+    }
+}
+
 @media (min-width: 769.98px) {
     .navbar {
         top: 0;
         position: sticky;
         z-index: 998;
     }
+
     .content {
         z-index: 997;
     }
-    .logo {
-        width: 12rem;
-        height: 9rem;
-        margin-left: 2rem;
+
+    .navbar {
+        padding: 2rem;
     }
 }
