--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
     color: rgb(103, 103, 103) !important;
 }
 .dropdown-menu {
-    margin-left: -3em !important;
+    margin-left: -0.5em !important;
 }
 .logo {
     width: 12em;
@@ -133,8 +133,8 @@ textarea {
     }
 }
 
-@media (max-width: 767.98px) {
-    .wallpaper {
-        display: none;
+@media (max-width: 959.98px) {
+    .background {
+        height: auto !important;
     }
 }
