BackEnd phase : refactoring code phase 1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,9 @@
 .active {
     background-color: #4059a0 !important;
 }
+.active-title {
+    color: #4059a0 !important;
+}
 .container-fluid {
     display: block;
 }
